Fixed div scrolling on mobile

--- a/static/stocks.css
+++ b/static/stocks.css
@@ -440,8 +440,7 @@ input::-webkit-inner-spin-button {
     .sidebar {
         float: none;
         width: 100%;
-        height: 300px;
-        overflow: scroll;
+        height: 310px;
     }
 
     .table-options {
@@ -455,14 +454,8 @@ input::-webkit-inner-spin-button {
     .notes {
         display: none;
     }
-
-    .rTableHead, .rTableCell {
-        overflow: scroll;
-    }
-
+    
     .stock-form-input {
         margin-bottom: 10px;
     }
-
-
 }
